# FireRedDecompTool

./: CMakeLists.txt
include/: MainWindow.h  StartupWindow.h
resources/: resources.qrc
src/: MainWindow.cpp  StartupWindow.cpp  main.cpp
src/ui/: HomeTab.cpp  HomeTab.h  Logger.h  PokedexTab.cpp  PokedexTab.h  PokemonTab.cpp  PokemonTab.h
